[package]
name = "hello_app"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
gemgui = {path  = "../../gemgui" }

[dependencies]
gemgui = {path  = "../../gemgui" }


[[bin]]
name = "hello_app"
path = "main.rs"


